--- a/John/ABC.html
+++ b/John/ABC.html
@@ -495,7 +495,7 @@ $.ajax(	{
 		
 		QUANTITY:
 		<form>
-		<input type="text" name="quantity">
+		<input type="text" id="t_QUANTITY" name="t_QUANTITY" value ="0">
 		<input type="submit" value="Submit">
 		</form>
 	</div>
